roles/traefik/files/nginx-ingress.yml
# bug report https://community.traefik.io/t/problems-with-traefik-v2-10-ingress-stripprefix/19907

# Middleware
# Strips the /nginx prefix
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nginx
  namespace: www
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - "/nginx"

---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: www
  annotations:
    kubernetes.io/spec.ingressClassName: traefik
    traefik.ingress.kubernetes.io/router.middlewares: www-nginx@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - apps.k3s-west.corp.igsp.rocks
      secretName: apps-vip-secret
  rules:
    - host: apps.k3s-west.corp.igsp.rocks
      http:
        paths:
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
